objects/Medication__c.object
<CustomObject>
    <description>Medications taken by the contact</description>
    <fields>
        <fullName>Contact_meds__c</fullName>
        <description>The contact that takes this medication</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Medications</relationshipLabel>
        <relationshipName>Medications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dose__c</fullName>
        <description>The strength of each dose taken, i.e. 50mg, 10ml etc.</description>
        <inlineHelpText>The strength of each dose taken, i.e. 50mg, 10ml etc.</inlineHelpText>
        <label>Dose</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>How often the medication is taken</description>
        <inlineHelpText>How often the medication is taken</inlineHelpText>
        <label>Frequency</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Additional information about the medication, side effects, etc</description>
        <inlineHelpText>Additional information about the medication, side effects, etc</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <label>Medication</label>
    <nameField>
        <label>Medication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>